backend/wolfstore-payment/k8s/wolfstore-payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wolfstore-payment-deployment
  namespace: wolfns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wolfstore-payment
  template:
    metadata:
      labels:
        app: wolfstore-payment
    spec:
      containers:
        - name: wolfstore-payment
          image: marcusvbrangel/wolfstore-payment:1.0.1
          ports:
            - containerPort: 8080
