backend/wolfstore-payment/k8s/wolfstore-payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wolfstore-payment-service
  namespace: wolfns
spec:
  selector:
    app: wolfstore-payment
  ports:
    - protocol: TCP
      port: 8098
      targetPort: 8080
  type: ClusterIP
